apps/base/authelia/default-ns-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    istio.io/use-waypoint: waypoint
